# leptos_animation

./: Cargo.toml  README.md
.github/workflows/: rust.yml
example/: Cargo.toml  index.html
example/src/: full.rs  main.rs  simple.rs  text.rs
src/: animation_target.rs  easing.rs  lib.rs
