[package]
name = "example"
version = "0.2.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["nightly", "csr"] }
leptos_router = { version = "0.7", features = ["nightly"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d"] }
leptos_animation = { path = ".." }
palette = "0.7"
derive_more = { version = "1.0", features = ["full"] }
console_error_panic_hook = "0.1"
wasm-logger = "0.2"
