[package]
name = "example"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.7", features = ["nightly", "csr"] }
leptos_router = { version = "0.7", features = ["nightly"] }
leptos_meta = { version = "0.7" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d"] }
leptos_animation = { path = ".." }
palette = "0.7"
derive_more = "0.99"
console_error_panic_hook = "0.1"
log = "0.4"
console_log = "0.1"
